--- a/resume/chinese.html
+++ b/resume/chinese.html
@@ -29,7 +29,7 @@
 </ul>
 <p><b> 数据库索引方向毕业论文，浙江大学，杭州，2016.03 - 2016.05 </b></p>
 <ul>
-<li> 对多种索引结构在不同数据类型的数据集上进行实验 (strings, vectors, trees)
+<li> 对多种索引结构在不同数据类型的数据集上进行实验 (vector, string, set)
 <li> 在运行时间，距离计算次数，索引大小和I/O次数上对比索引构建成本和相似性查询效率
 </ul>
 
