--- a/resume/english.html
+++ b/resume/english.html
@@ -28,7 +28,7 @@
 </ul>
 <p><b> Graduate Thesis in Database index, Zhejiang University, Hangzhou, 2016.03 - 2016.05 </b></p>
 <ul>
-<li> Experiment on various index structures with different types of dataset (strings, vectors, trees)
+<li> Experiment on various index structures with different types of dataset (vector, string, set)
 <li> Compared index building cost and similarity query efficiency, in terms of running time, distance computations, index size and I/O times
 </ul>
 
