edit after post on linkedin

--- a/resume/chinese.html
+++ b/resume/chinese.html
@@ -27,7 +27,7 @@
 <li> 用C++实现两种索引结构 (Clustered Pivot Tables, Extreme Pivots)，两种查询算法 (范围查询，kNN查询)
 <li> 将三种索引结构 (CPT, EP, M-tree) 改为外存索引算法，用于统一性能比较
 </ul>
-<p><b> 数据库索引方向毕业论文，浙江大学，杭州，2016.03 - 2016.05 </b></p>
+<p><b> 基于支枢点的度量空间索引实验比较研究，浙江大学，杭州，2016.03 - 2016.05 </b></p>
 <ul>
 <li> 对多种索引结构在不同数据类型的数据集上进行实验 (vector, string, set)
 <li> 在运行时间，距离计算次数，索引大小和I/O次数上对比索引构建成本和相似性查询效率
