--- a/resume/english.html
+++ b/resume/english.html
@@ -1,5 +1,5 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-<HTML><HEAD><TITLE>Resume -- Henry Yang</TITLE>
+<HTML><HEAD><TITLE>Resume -- Hanyu Yang</TITLE>
 <BODY>
 <CENTER>
 <img src="avatar/glasses.jpg" alt="Avatar" height="90px" width="60px" align="right">
@@ -26,7 +26,7 @@
 <li> Implemented two index structures (Clustered Pivot Tables, Extreme Pivots), two query algorithms (Range, kNN) in C++
 <li> Improved three index structures (CPT, EP, M-tree) to external storage index algorithms for comparison
 </ul>
-<p><b> Graduate Thesis in Database index, Zhejiang University, Hangzhou, 2016.03 - 2016.05 </b></p>
+<p><b> Research on Experimental Evaluation for Pivot-based Metric Indexes, Zhejiang University, Hangzhou, 2016.03 - 2016.05 </b></p>
 <ul>
 <li> Experiment on various index structures with different types of dataset (vector, string, set)
 <li> Compared index building cost and similarity query efficiency, in terms of running time, distance computations, index size and I/O times
