add one list on fyp

--- a/resume/chinese.html
+++ b/resume/chinese.html
@@ -30,6 +30,7 @@
 <p><b> 基于支枢点的度量空间索引实验比较研究，浙江大学，杭州，2016.03 - 2016.05 </b></p>
 <ul>
 <li> 对多种索引结构在不同数据类型的数据集上进行实验 (vector, string, set)
+<li> 通过替换支枢点选择算法，改进了EP (Extreme Pivots) 索引的查询性能
 <li> 在运行时间，距离计算次数，索引大小和I/O次数上对比索引构建成本和相似性查询效率
 </ul>
 
