--- a/resume/english.html
+++ b/resume/english.html
@@ -29,6 +29,7 @@
 <p><b> Research on Experimental Evaluation for Pivot-based Metric Indexes, Zhejiang University, Hangzhou, 2016.03 - 2016.05 </b></p>
 <ul>
 <li> Experiment on various index structures with different types of dataset (vector, string, set)
+<li> Improved query performance by replacing Pivots Selecting Algorithm of Extreme Pivots
 <li> Compared index building cost and similarity query efficiency, in terms of running time, distance computations, index size and I/O times
 </ul>
 
