change English name

--- a/resume/english.html
+++ b/resume/english.html
@@ -3,7 +3,7 @@
 <BODY>
 <CENTER>
 <img src="avatar/glasses.jpg" alt="Avatar" height="90px" width="60px" align="right">
-<H1>Henry Yang</H1>
+<H1>Hanyu Yang</H1>
 <h4>e-mail: <a href="mailto:yanghanyums@outlook.com">yanghanyums@outlook.com</a> <br /> mobile: +8618868122668</h4>
 </CENTER>
 
