--- a/resume/english.html
+++ b/resume/english.html
@@ -14,32 +14,33 @@
 </UL>
 
 <H2>Work</H2>
-<p><b> Backend Engineer (intern), Jiayun Data Science and Technology Co., Ltd, Hangzhou, 2015.05 - 2015.07 </b></p>
+<p><b> Back-end Engineer (intern), Jiayun Data Science and Technology Co., Ltd, Hangzhou, 2015.05 - 2015.07 </b></p>
 <ul>
-<li> Used Spring MVC framework for backend development and Hibernate for database configuration 
+<li> Used Spring MVC framework and Hibernate for back-end development and database configuration of an e-Business Platform
 <li> Used Jmeter to generate automated testing scripts for POST request and response testing
 </ul>
 
 <H2>Research</H2>
 <p><b> Guided Research in IS, Singapore Management University, Singapore, 2015.09 - 2015.11 </b></p>
 <ul>
-<li> Implemented two index structures (Clustered Pivot Tables, Extreme Pivots), two query algorithms (Range, kNN) in C++
-<li> Improved three index structures (CPT, EP, M-tree) to external storage index algorithms for comparison
+<li> Implemented two index structures (Clustered Pivot Tables, Extreme Pivots), two query algorithms (Range, kNN) for Metric Space Similarity Qeury (C++)
+<li> Changed three index structures (CPT, EP, M-tree) to external storage index algorithms for more fair comparison
 </ul>
 <p><b> Research on Experimental Evaluation for Pivot-based Metric Indexes, Zhejiang University, Hangzhou, 2016.03 - 2016.05 </b></p>
 <ul>
-<li> Experiment on various index structures with different types of dataset (vector, string, set)
-<li> Improved query performance by replacing Pivots Selecting Algorithm of Extreme Pivots
-<li> Compared index building cost and similarity query efficiency, in terms of running time, distance computations, index size and I/O times
+<li> Experiment on ten index structures with Range and kNN query and different types of dataset (vector, string, set)
+<li> Improved query performance by replacing Pivots Selecting Algorithms of two index structures (EP, VPT)
+<li> Compared index building cost and query performance, in terms of running time, distance computations, index size and I/O times (for external storage algorithms)
 </ul>
 
 <H2>Project</H2>
 <ul>
-<li> Undertook Crawler, Tokenizer, Stemmer, Indexer, Corrector of a search engine for Fox Sports NBA news (Java, 2014) 
-<li> Undertook real-time locating service and activities logic of a bus station reminder App Busbuzz (Android, 2014) 
-<li> Undertook Interpreter, Catalog Manager and Buffer Manager of a database systems MiniSQL (C++, 2014)
-<li> Undertook Administrator Control Panel for posts and users management of a Campus Forum System (PHP + MySQL, 2015) 
-<li> Undertook gait data collection with Arduino and pattern recognition of a Smart Shoe Program (Python, 2015)
+<li> Implemented the Crawler, Tokenizer, Stemmer, Indexer and Corrector part of a search engine built for Fox Sports NBA news and players profile (Java, 2014) 
+<li> Designed the Activities logic of a GPS-based real-time bus station reminder App and undertook the real-time locating and destination detection part (Android, 2014) 
+<li> Implemented the Interpreter, Catalog Manager and Buffer Manager part of a mini database systems, in support of all basic standard SQL queries (C++, 2014)
+<li> Wrote the Administrator Control Panel part of a Campus Forum System, to manage the boards and posts in the forum, as well as users' privilege (PHP + MySQL, 2015) 
+<li> Undertook the data collection and processing on Arduino of a Smart Insole Program, and designed a gait pattern detection algorithm to trigger specific tasks on PC (C + Python, 2015)
+<li> Exploiting Buffer Overflow vulnerability on open source software and perform Return-to-libc attack to print out specific variables (Assembly + C, 2015)
 </ul>
 
 </BODY></HTML>
