--- a/resume/english.html
+++ b/resume/english.html
@@ -14,7 +14,7 @@
 </UL>
 
 <H2>Work</H2>
-<p><b> Back-end Engineer (intern), Jiayun Data Science and Technology Co., Ltd, Hangzhou, 2015.05 - 2015.07 </b></p>
+<p><b> Back-end Engineer (intern), Jiayun Data Science and Technology, Hangzhou, 2015.05 - 2015.07 </b></p>
 <ul>
 <li> Used Spring MVC framework and Hibernate for back-end development and database configuration of an e-Business Platform
 <li> Used Jmeter to generate automated testing scripts for POST request and response testing
