within one page

--- a/resume/english.html
+++ b/resume/english.html
@@ -26,9 +26,9 @@
 <li> Implemented two index structures (Clustered Pivot Tables, Extreme Pivots), two query algorithms (Range, kNN) for Metric Space Similarity Qeury (C++)
 <li> Changed three index structures (CPT, EP, M-tree) to external storage index algorithms for more fair comparison
 </ul>
-<p><b> Research on Experimental Evaluation for Pivot-based Metric Indexes, Zhejiang University, Hangzhou, 2016.03 - 2016.05 </b></p>
+<p><b> Graduation Thesis on Metric Indexes, Zhejiang University, Hangzhou, 2016.03 - 2016.05 </b></p>
 <ul>
-<li> Experiment on ten index structures with Range and kNN query and different types of dataset (vector, string, set)
+<li> Experiment on ten index structures with different types of dataset (vector, string, set)
 <li> Improved query performance by replacing Pivots Selecting Algorithms of two index structures (EP, VPT)
 <li> Compared index building cost and query performance, in terms of running time, distance computations, index size and I/O times (for external storage algorithms)
 </ul>
@@ -42,5 +42,4 @@
 <li> Undertook the data collection and processing on Arduino of a Smart Insole Program, and designed a gait pattern detection algorithm to trigger specific tasks on PC (C + Python, 2015)
 <li> Exploiting Buffer Overflow vulnerability on open source software and perform Return-to-libc attack to print out specific variables (Assembly + C, 2015)
 </ul>
-
 </BODY></HTML>
