--- a/resume/english.html
+++ b/resume/english.html
@@ -1,45 +1,114 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-<HTML><HEAD><TITLE>Resume -- Hanyu Yang</TITLE>
-<BODY>
-<CENTER>
-<img src="avatar/glasses.jpg" alt="Avatar" height="90px" width="60px" align="right">
-<H1>Hanyu Yang</H1>
-<h4>e-mail: <a href="mailto:yanghanyums@outlook.com">yanghanyums@outlook.com</a> <br /> mobile: +8618868122668</h4>
-</CENTER>
+<html>
 
-<H2>Education</H2>
-<UL>
-  <LI> B.E., Computer Science, Zhejiang University, GPA 3.8/4.0, 2012.09 - 2016.06 </LI>
-  <LI> Exchange, Information Systems, Singapore Management University, Major GPA 3.9/4.0, 2015.08 - 2015.12 </LI>
-</UL>
+<head>
+<title>Resume -- Hanyu Yang</title>
+<style type="text/css">
+h1, p, h3, h5, ul{
+	margin-top: 1px;
+	margin-bottom: 1px;
+}
+h3 {
+	border-bottom: 1px solid black;
+}
+a {
+	color: inherit;
+}
+</style>
+</head>
 
-<H2>Work</H2>
-<p><b> Back-end Engineer (intern), Jiayun Data Science and Technology, Hangzhou, 2015.05 - 2015.07 </b></p>
+<body>
+<center>
+<!-- <img src="avatar/glasses.jpg" alt="Avatar" height="90px" width="60px" align="right"> -->
+<h1>Hanyu Yang</a></h1>
+
+
+<h5>
+Email: <a href="mailto:hanyuy@andrew.cmu.edu" style="text-decoration: none">hanyuy@andrew.cmu.edu</a>
+&nbsp;|&nbsp; 
+Linkedin: <a href="https://www.linkedin.com/in/hanyuy" style="text-decoration: none">Hanyu Yang(Henry)</a>
+</h5>
+</center>
+
+
+<h3>EDUCATION</h3>
+<p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
+<p>&nbsp;&nbsp;&nbsp; <i>Master of Science in Information Technology, Mobility, Expected May 2018</i> </p>
+
+<p><b> Singapore Management University, Singapore </b></p>
+<p>&nbsp;&nbsp;&nbsp; <i>Exchange, Information Systems, December 2015, Major GPA 3.9</i> </p>
+
+<p><b> Zhejiang University, Hangzhou, China </b></p>
+<p>&nbsp;&nbsp;&nbsp; <i>Bachelor of Engineering, Computer Science, July 2016, Major GPA 3.92</i> </p>
+
+
+<h3>SKILL</h3>
 <ul>
-<li> Used Spring MVC framework and Hibernate for back-end development and database configuration of an e-Business Platform
-<li> Used Jmeter to generate automated testing scripts for POST request and response testing
+  	<li> Programming/Scripting Languages: C, C++, Python, Java, Octave, PHP, JavaScript </li>
+  	<li> Frameworks and Tools: Apache Spark, Git, Django </li>
 </ul>
 
-<H2>Research</H2>
-<p><b> Guided Research in IS, Singapore Management University, Singapore, 2015.09 - 2015.11 </b></p>
+
+<h3>EXPERIENCE</h3>
+<p><b> Back-end Engineer (Intern), Cross-Border e-Commerce Web Application (Java) </b></p>
+<p>&nbsp;&nbsp;&nbsp; <i>Jiayun Data Science and Technology, Hangzhou, China, May - July 2015</i> </p>
 <ul>
-<li> Implemented two index structures (Clustered Pivot Tables, Extreme Pivots), two query algorithms (Range, kNN) for Metric Space Similarity Qeury (C++)
-<li> Changed three index structures (CPT, EP, M-tree) to external storage index algorithms for more fair comparison
-</ul>
-<p><b> Graduation Thesis on Metric Indexes, Zhejiang University, Hangzhou, 2016.03 - 2016.05 </b></p>
-<ul>
-<li> Experiment on ten index structures with different types of dataset (vector, string, set)
-<li> Improved query performance by replacing Pivots Selecting Algorithms of two index structures (EP, VPT)
-<li> Compared index building cost and query performance, in terms of running time, distance computations, index size and I/O times (for external storage algorithms)
+	<li> Developed back-end business logic and data access based on Spring and Hibernate framework </li>
+	<li> Generated automated scripts for back-end request and response testing with Jmeter </li>
 </ul>
 
-<H2>Project</H2>
+<p><b> Research Student, Experimental Evaluation for Pivot-based Metric Index (C++) </b></p>
+<p>&nbsp;&nbsp;&nbsp; <i>Singapore Management University, Singapore & Zhejiang University, China, September 2015 - May 2016</i> </p>
 <ul>
-<li> Implemented the Crawler, Tokenizer, Stemmer, Indexer and Corrector part of a search engine built for Fox Sports NBA news and players profile (Java, 2014) 
-<li> Designed the Activities logic of a GPS-based real-time bus station reminder App and undertook the real-time locating and destination detection part (Android, 2014) 
-<li> Implemented the Interpreter, Catalog Manager and Buffer Manager part of a mini database systems, in support of all basic standard SQL queries (C++, 2014)
-<li> Wrote the Administrator Control Panel part of a Campus Forum System, to manage the boards and posts in the forum, as well as users' privilege (PHP + MySQL, 2015) 
-<li> Undertook the data collection and processing on Arduino of a Smart Insole Program, and designed a gait pattern detection algorithm to trigger specific tasks on PC (C + Python, 2015)
-<li> Exploiting Buffer Overflow vulnerability on open source software and perform Return-to-libc attack to print out specific variables (Assembly + C, 2015)
+	<li> Implemented three index structures (LAESA, CPT, EP) for two metric similarity qeuries (Range, kNN) </li>
+	<li> Improved query performance by replacing Pivots Selecting Algorithms for three index structures </li>
 </ul>
-</BODY></HTML>
+
+
+<h3>PROJECT</h3>
+<p><b> Information Retrieval and Web Search (Python) </b></p>
+<p>&nbsp;&nbsp;&nbsp; <i>Zhejiang University, Fall 2014</i> </p>
+<ul>
+	<li> Developed the Crawler, Tokenizer, Stemmer, Indexer and Corrector part of a search engine built for Fox Sports NBA news and players profile </li>
+</ul>
+
+<p><b> Database System Design (C++) </b></p>
+<p>&nbsp;&nbsp;&nbsp; <i>Zhejiang University, Fall 2014</i> </p>
+<ul>
+	<li> Implemented the Interpreter, Catalog Manager and Buffer Manager of a mini database system, in support of all basic standard SQL queries </li>
+</ul>
+
+<p><b> Student Research Training Program (Python) </b></p>
+<p>&nbsp;&nbsp;&nbsp; <i>Zhejiang University, Spring 2015</i> </p>
+<ul>
+	<li> Utilized Arduino to collect and process data from an insole sensor, and designed a gait pattern detection algorithm to trigger specific tasks on PC </li>
+</ul>
+
+<p><b> Smartphone Software Development (Android) </b></p>
+<p>&nbsp;&nbsp;&nbsp; <i>Zhejiang University, Spring 2015</i> </p>
+<ul>
+	<li> Designed the Activities logic of a GPS-based real-time bus station reminder App and undertook the real-time locating and destination detection part </li>
+</ul>
+
+<p><b> Software Engineering (PHP + MySQL) </b></p>
+<p>&nbsp;&nbsp;&nbsp; <i>Zhejiang University, Spring 2015</i> </p>
+<ul>
+	<li> Wrote the Administrator Control Panel part of a Campus Forum System, to manage the boards and posts in the forum, as well as user privileges </li>
+</ul>
+
+<p><b> Software and System Security (Assembly + C) </b></p>
+<p>&nbsp;&nbsp;&nbsp; <i>Singapore Management University, Fall 2015</i> </p>
+<ul>
+	<li> Exploited Buffer Overflow vulnerability on open source software and performed Return-to-libc attack to print out specific variables </li>
+</ul>
+
+
+<h3>COURSEWORK</h3>
+<ul>
+  	<li> CMU, Fall 2016: Introduction to Computer Systems (15-513), Web Application Development (15-637) </li>
+  	<li> Machine Learning (Stanford@Coursera), Data Science and Engineering with Apache Spark (UCB@edX) </li>
+</ul>
+
+
+</body>
+</html>
