--- a/resume/english.html
+++ b/resume/english.html
@@ -19,14 +19,13 @@ a {
 
 <body>
 <center>
-<!-- <img src="avatar/glasses.jpg" alt="Avatar" height="90px" width="60px" align="right"> -->
-<h1>Hanyu Yang</a></h1>
+<h1><a href="https://www.linkedin.com/in/hanyuy" style="text-decoration: none">Hanyu Yang (Henry)</a></h1>
 
 
 <h5>
 Email: <a href="mailto:hanyuy@andrew.cmu.edu" style="text-decoration: none">hanyuy@andrew.cmu.edu</a>
 &nbsp;|&nbsp; 
-Linkedin: <a href="https://www.linkedin.com/in/hanyuy" style="text-decoration: none">Hanyu Yang(Henry)</a>
+Tel: +1(412)9834514
 </h5>
 </center>
 
