--- a/resume/english.html
+++ b/resume/english.html
@@ -1,113 +1,190 @@
-<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <html>
 
 <head>
-<title>Resume -- Hanyu Yang</title>
-<style type="text/css">
-h1, p, h3, h5, ul{
-	margin-top: 1px;
-	margin-bottom: 1px;
-}
-h3 {
-	border-bottom: 1px solid black;
-}
-a {
-	color: inherit;
-}
-</style>
+    <title>Hanyu_Yang_Resume</title>
+    <style type="text/css">
+        h1, p, h3, h5, ul {
+            margin-top: 1px;
+            margin-bottom: 1px;
+        }
+
+        h3 {
+            border-bottom: 1px solid black;
+        }
+
+        a {
+            color: inherit;
+        }
+
+        i {
+            padding-left: 12px;
+        }
+
+        .wrapper {
+            width: 100%
+            height: 100%;
+            overflow: auto;
+        }
+
+        .left {
+            width: 49%;
+            display: inline-block;
+            float: left;
+        }
+
+        .right {
+            width: 49%;
+            display: inline-block;
+            float: right;
+        }
+
+        .center {
+            text-align: center;
+        }
+
+        .bio {
+            font-size: 16px;
+            padding-left: 12px;
+        }
+
+        .course {
+            padding-left: 24px;
+            font-size: 14px;
+        }
+    </style>
 </head>
 
 <body>
-<center>
-<h1><a href="https://www.linkedin.com/in/hanyuy" style="text-decoration: none">Hanyu Yang (Henry)</a></h1>
+<div class="center">
+    <h1><a href="https://www.linkedin.com/in/hanyuy" style="text-decoration: none">Hanyu Yang</a></h1>
+    <h5>
+        Email: <a href="mailto:hanyuy@andrew.cmu.edu" style="text-decoration: none">hanyuy@andrew.cmu.edu</a>
+        &nbsp;|&nbsp;
+        Tel: +1(412)9834514
+    </h5>
+</div>
+
+<div class="wrapper">
+    <h3>OBJECTIVE</h3>
+    <p class="bio">I'm a graduate student looking for internship in Software Engineer or Data Engineer. I aspire to
+        engage in Internet of Things and Data Science and Engineering area to pursue a smarter life.</p>
+</div>
 
 
-<h5>
-Email: <a href="mailto:hanyuy@andrew.cmu.edu" style="text-decoration: none">hanyuy@andrew.cmu.edu</a>
-&nbsp;|&nbsp; 
-Tel: +1(412)9834514
-</h5>
-</center>
+<div class="wrapper">
+    <h3>EDUCATION</h3>
+    <p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
+    <p><i>Master of Science in Information Technology, Mobility, Expected May 2018</i></p>
+    <p class="course">Coursework: Introduction to Computer Systems (15-513), Web Application Development (15-637),
+        Information Security (14-741), Computer Networks (14-740), Distributed Systems (15-640)</p>
+
+    <p><b> Singapore Management University, Singapore </b></p>
+    <p><i>Exchange, Information Systems, December 2015, Major GPA 3.9</i></p>
+
+    <p><b> Zhejiang University, Hangzhou, China </b></p>
+    <p><i>Bachelor of Engineering, Computer Science, July 2016, Major GPA 3.93</i></p>
+</div>
 
 
-<h3>EDUCATION</h3>
-<p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
-<p>&nbsp;&nbsp;&nbsp; <i>Master of Science in Information Technology, Mobility, Expected May 2018</i> </p>
+<div class="wrapper">
+    <h3>EXPERIENCE</h3>
+    <p><b> Linux Programmer, Assist in programming tasks for Mellon College of Science (Python) </b></p>
+    <p><i>Carnegie Mellon University, Pittsburgh, PA, October - present 2016</i></p>
+    <ul>
+        <li> Anomaly analysis on emails of server log files with learning algorithm</li>
+    </ul>
 
-<p><b> Singapore Management University, Singapore </b></p>
-<p>&nbsp;&nbsp;&nbsp; <i>Exchange, Information Systems, December 2015, Major GPA 3.9</i> </p>
+    <p><b> Research Student, Experimental Evaluation for Pivot-based Metric Index (C++) </b></p>
+    <p><i>Singapore Management University, Singapore & Zhejiang University, China, September 2015 -
+        May 2016</i></p>
+    <ul>
+        <li> Implemented three index structures (LAESA, CPT, EP) for two metric similarity qeuries (Range, kNN)</li>
+        <li> Improved query performance by replacing Pivots Selecting Algorithms for three index structures</li>
+    </ul>
 
-<p><b> Zhejiang University, Hangzhou, China </b></p>
-<p>&nbsp;&nbsp;&nbsp; <i>Bachelor of Engineering, Computer Science, July 2016, Major GPA 3.92</i> </p>
-
-
-<h3>SKILL</h3>
-<ul>
-  	<li> Programming/Scripting Languages: C, C++, Python, Java, Octave, PHP, JavaScript </li>
-  	<li> Frameworks and Tools: Apache Spark, Git, Django </li>
-</ul>
-
-
-<h3>EXPERIENCE</h3>
-<p><b> Back-end Engineer (Intern), Cross-Border e-Commerce Web Application (Java) </b></p>
-<p>&nbsp;&nbsp;&nbsp; <i>Jiayun Data Science and Technology, Hangzhou, China, May - July 2015</i> </p>
-<ul>
-	<li> Developed back-end business logic and data access based on Spring and Hibernate framework </li>
-	<li> Generated automated scripts for back-end request and response testing with Jmeter </li>
-</ul>
-
-<p><b> Research Student, Experimental Evaluation for Pivot-based Metric Index (C++) </b></p>
-<p>&nbsp;&nbsp;&nbsp; <i>Singapore Management University, Singapore & Zhejiang University, China, September 2015 - May 2016</i> </p>
-<ul>
-	<li> Implemented three index structures (LAESA, CPT, EP) for two metric similarity qeuries (Range, kNN) </li>
-	<li> Improved query performance by replacing Pivots Selecting Algorithms for three index structures </li>
-</ul>
+    <p><b> Back-end Engineer (Intern), Cross-Border e-Commerce Web Application (Java) </b></p>
+    <p><i>Jiayun Data Science and Technology, Hangzhou, China, May - July 2015</i></p>
+    <ul>
+        <li> Developed back-end business logic and data access based on Spring and Hibernate framework</li>
+        <li> Generated automated scripts for back-end request and response testing with Jmeter</li>
+    </ul>
+</div>
 
 
-<h3>PROJECT</h3>
-<p><b> Information Retrieval and Web Search (Python) </b></p>
-<p>&nbsp;&nbsp;&nbsp; <i>Zhejiang University, Fall 2014</i> </p>
-<ul>
-	<li> Developed the Crawler, Tokenizer, Stemmer, Indexer and Corrector part of a search engine built for Fox Sports NBA news and players profile </li>
-</ul>
+<div class="wrapper">
+    <h3>PROJECT</h3>
+    <div class="left">
+        <p><b> Information Retrieval and Web Search (Python) </b></p>
+        <p><i>Zhejiang University, Fall 2014</i></p>
+        <ul>
+            <li> Developed the Crawler, Tokenizer, Stemmer, Indexer and Corrector part of a search engine built for Fox
+                Sports NBA news and players
+            </li>
+        </ul>
 
-<p><b> Database System Design (C++) </b></p>
-<p>&nbsp;&nbsp;&nbsp; <i>Zhejiang University, Fall 2014</i> </p>
-<ul>
-	<li> Implemented the Interpreter, Catalog Manager and Buffer Manager of a mini database system, in support of all basic standard SQL queries </li>
-</ul>
+        <p><b> Smartphone Software Development (Android) </b></p>
+        <p><i>Zhejiang University, Spring 2015</i></p>
+        <ul>
+            <li> Designed the Activities logic of a GPS-based real-time bus reminder App and undertook the
+                real-time locating and destination detection part
+            </li>
+        </ul>
 
-<p><b> Student Research Training Program (Python) </b></p>
-<p>&nbsp;&nbsp;&nbsp; <i>Zhejiang University, Spring 2015</i> </p>
-<ul>
-	<li> Utilized Arduino to collect and process data from an insole sensor, and designed a gait pattern detection algorithm to trigger specific tasks on PC </li>
-</ul>
+        <p><b> Student Research Training Program (Python) </b></p>
+        <p><i>Zhejiang University, Spring 2015</i></p>
+        <ul>
+            <li> Utilized Arduino to collect and process data from an insole sensor, and designed a gait pattern
+                detection algorithm to trigger tasks
+            </li>
+        </ul>
+    </div>
 
-<p><b> Smartphone Software Development (Android) </b></p>
-<p>&nbsp;&nbsp;&nbsp; <i>Zhejiang University, Spring 2015</i> </p>
-<ul>
-	<li> Designed the Activities logic of a GPS-based real-time bus station reminder App and undertook the real-time locating and destination detection part </li>
-</ul>
+    <div class="right">
+        <p><b> Database System Design (C++) </b></p>
+        <p><i>Zhejiang University, Fall 2014</i></p>
+        <ul>
+            <li> Implemented the Interpreter, Catalog Manager and Buffer Manager of a mini database system, in support
+                of all basic standard SQL queries
+            </li>
+        </ul>
 
-<p><b> Software Engineering (PHP + MySQL) </b></p>
-<p>&nbsp;&nbsp;&nbsp; <i>Zhejiang University, Spring 2015</i> </p>
-<ul>
-	<li> Wrote the Administrator Control Panel part of a Campus Forum System, to manage the boards and posts in the forum, as well as user privileges </li>
-</ul>
+        <p><b> Software Engineering (PHP + MySQL) </b></p>
+        <p><i>Zhejiang University, Spring 2015</i></p>
+        <ul>
+            <li> Wrote the Administrator Control Panel part of a Campus Forum System, to manage the boards and posts in
+                the forum, as well as user privileges
+            </li>
+        </ul>
 
-<p><b> Software and System Security (Assembly + C) </b></p>
-<p>&nbsp;&nbsp;&nbsp; <i>Singapore Management University, Fall 2015</i> </p>
-<ul>
-	<li> Exploited Buffer Overflow vulnerability on open source software and performed Return-to-libc attack to print out specific variables </li>
-</ul>
+        <p><b> Software and System Security (Assembly + C) </b></p>
+        <p><i>Singapore Management University, Fall 2015</i></p>
+        <ul>
+            <li> Exploited Buffer Overflow vulnerability on open source software and performed Return-to-libc attack to
+                print out specific variables
+            </li>
+        </ul>
+    </div>
+</div>
 
 
-<h3>COURSEWORK</h3>
-<ul>
-  	<li> CMU, Fall 2016: Introduction to Computer Systems (15-513), Web Application Development (15-637) </li>
-  	<li> Machine Learning (Stanford@Coursera), Data Science and Engineering with Apache Spark (UCB@edX) </li>
-</ul>
+<div class="wrapper">
+    <h3>SKILL</h3>
+    <ul>
+        <li> Programming/Scripting Languages: C/C++, Python, Java, JavaScript, HTML, CSS, Android, PHP, Octave</li>
+        <li> Frameworks and Tools: Django, jQuery, pySpark, Git, Spring, Hibernate</li>
+    </ul>
+</div>
 
+
+<div class="wrapper">
+    <h3>COURSES</h3>
+    <ul>
+        <li> Machine Learning (Stanford@Coursera), Data Science and Engineering with Apache Spark (UCB@edX), Overview of
+            Internet of Things (NTHU@icourse163)
+        </li>
+    </ul>
+</div>
 
 </body>
 </html>
