update Cloud Computing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <BODY>
 <H2> Resume </H2>
 <UL>
-	<LI><a href="resume/chinese.html">中文</a></LI>
-	<LI><a href="resume/english.html">English</a></LI>
+	<LI><a href="resume/jianli.html">中文</a></LI>
+	<LI><a href="resume/resume.html">English</a></LI>
 </UL>
 </BODY>
