--- a/resume/resume.html
+++ b/resume/resume.html
@@ -76,8 +76,7 @@
     <h3>EDUCATION</h3>
     <p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
     <p><i>Master of Science in Information Technology, Mobility, Expected May 2018</i></p>
-    <p class="course">Coursework: Introduction to Computer Systems (15-513), Web Application Development (15-637),
-        Information Security (14-741), Computer Networks (14-740), Distributed Systems (15-640)</p>
+    <p class="course">Coursework: Introduction to Computer Systems (15-513), Web Application Development (15-637), Information Security (14-741), Computer Networks (14-740), Distributed Systems (15-640), Cloud Computing (15-619) </p>
 
     <p><b> Singapore Management University, Singapore </b></p>
     <p><i>Exchange, Information Systems, December 2015, Major GPA 3.9</i></p>
