--- a/resume/resume.html
+++ b/resume/resume.html
@@ -68,7 +68,7 @@
 <div class="wrapper">
     <h3>OBJECTIVE</h3>
     <p class="bio">I'm a graduate student looking for internship in Software Engineer or Data Engineer. I aspire to
-        engage in Internet of Things and Data Science and Engineering area to pursue a smarter life.</p>
+        engage in Internet of Things and Artificial Intelligence area to pursue a smarter life.</p>
 </div>
 
 
@@ -76,7 +76,7 @@
     <h3>EDUCATION</h3>
     <p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
     <p><i>Master of Science in Information Technology, Mobility, Expected May 2018</i></p>
-    <p class="course">Coursework: Introduction to Computer Systems (15-513), Web Application Development (15-637), Information Security (14-741), Computer Networks (14-740), Distributed Systems (15-640), Cloud Computing (15-619) </p>
+    <p class="course">Course: Introduction to Computer Systems (15513), Web Application Development (15637), Information Security (14741), Telecommunications & Computer Networks (14740), Distributed Systems (15640), Cloud Computing (15619) </p>
 
     <p><b> Singapore Management University, Singapore </b></p>
     <p><i>Exchange, Information Systems, December 2015, Major GPA 3.9</i></p>
@@ -114,11 +114,11 @@
 <div class="wrapper">
     <h3>PROJECT</h3>
     <div class="left">
-        <p><b> Information Retrieval and Web Search (Python) </b></p>
-        <p><i>Zhejiang University, Fall 2014</i></p>
+        <p><b> Web Application Development (Django) </b></p>
+        <p><i>Carnegie Mellon University, Fall 2016</i></p>
         <ul>
-            <li> Developed the Crawler, Tokenizer, Stemmer, Indexer and Corrector part of a search engine built for Fox
-                Sports NBA news and players
+            <li> Built a Twitter like nanoblogging site Grumblr with Django MVC design, and web features like
+                ModelForm, Signals and Asynchronous updates.
             </li>
         </ul>
 
@@ -126,25 +126,7 @@
         <p><i>Zhejiang University, Spring 2015</i></p>
         <ul>
             <li> Designed the Activities logic of a GPS-based real-time bus reminder App and undertook the
-                real-time locating and destination detection part
-            </li>
-        </ul>
-
-        <p><b> Student Research Training Program (Python) </b></p>
-        <p><i>Zhejiang University, Spring 2015</i></p>
-        <ul>
-            <li> Utilized Arduino to collect and process data from an insole sensor, and designed a gait pattern
-                detection algorithm to trigger tasks
-            </li>
-        </ul>
-    </div>
-
-    <div class="right">
-        <p><b> Database System Design (C++) </b></p>
-        <p><i>Zhejiang University, Fall 2014</i></p>
-        <ul>
-            <li> Implemented the Interpreter, Catalog Manager and Buffer Manager of a mini database system, in support
-                of all basic standard SQL queries
+                real-time locating and destination detection part.
             </li>
         </ul>
 
@@ -152,15 +134,33 @@
         <p><i>Zhejiang University, Spring 2015</i></p>
         <ul>
             <li> Wrote the Administrator Control Panel part of a Campus Forum System, to manage the boards and posts in
-                the forum, as well as user privileges
+                the forum, as well as user privileges.
+            </li>
+        </ul>
+    </div>
+
+    <div class="right">
+        <p><b> Student Research Training Program (Python) </b></p>
+        <p><i>Zhejiang University, Spring 2015</i></p>
+        <ul>
+            <li> Utilized Arduino to collect and process data from an insole sensor, and designed a gait pattern
+                detection algorithm to trigger tasks.
             </li>
         </ul>
 
-        <p><b> Software and System Security (Assembly + C) </b></p>
-        <p><i>Singapore Management University, Fall 2015</i></p>
+        <p><b> Database System Design (C++) </b></p>
+        <p><i>Zhejiang University, Fall 2014</i></p>
         <ul>
-            <li> Exploited Buffer Overflow vulnerability on open source software and performed Return-to-libc attack to
-                print out specific variables
+            <li> Implemented the Interpreter, Catalog Manager and Buffer Manager of a mini database system, in support
+                of all basic standard SQL queries.
+            </li>
+        </ul>
+
+        <p><b> Information Retrieval and Web Search (Java) </b></p>
+        <p><i>Zhejiang University, Fall 2014</i></p>
+        <ul>
+            <li> Developed the Crawler, Tokenizer, Stemmer, Indexer and Corrector part of a search engine built for Fox
+                Sports NBA news and players.
             </li>
         </ul>
     </div>
@@ -170,7 +170,7 @@
 <div class="wrapper">
     <h3>SKILL</h3>
     <ul>
-        <li> Programming/Scripting Languages: C/C++, Python, Java, JavaScript, HTML, CSS, Android, PHP, Octave</li>
+        <li> Programming/Scripting Languages: C/C++, Python, Java, JavaScript, HTML, CSS, SQL</li>
         <li> Frameworks and Tools: Django, jQuery, pySpark, Git, Spring, Hibernate</li>
     </ul>
 </div>
@@ -179,7 +179,7 @@
 <div class="wrapper">
     <h3>COURSES</h3>
     <ul>
-        <li> Machine Learning (Stanford@Coursera), Data Science and Engineering with Apache Spark (UCB@edX), Overview of
+        <li> Machine Learning (Stanford@Coursera), Data Science and Engineering with Spark (UCB@edX), Overview of
             Internet of Things (NTHU@icourse163)
         </li>
     </ul>
