--- a/resume/resume2.html
+++ b/resume/resume2.html
@@ -68,7 +68,7 @@
 <div class="wrapper">
     <h3>OBJECTIVE</h3>
     <p class="bio">I'm a graduate student looking for internship in Software Engineer or Data Engineer. I aspire to
-        engage in Internet of Things and Artificial Intelligence areas to pursue a smarter life.</p>
+        apply my knowledge into Data Engineering and Artificial Intelligence areas to pursue a smarter life.</p>
 </div>
 
 
