add expecting course
CC + DS + CN

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -5,7 +5,7 @@
     <title>Hanyu_Yang_Resume</title>
     <style type="text/css">
         h1, p, h3, h5, ul {
-            margin-top: 1px;
+            margin-top: 2px;
             margin-bottom: 1px;
         }
 
@@ -68,7 +68,7 @@
 <div class="wrapper">
     <h3>OBJECTIVE</h3>
     <p class="bio">I'm a graduate student looking for internship in Software Engineer or Data Engineer. I aspire to
-        engage in Internet of Things and Artificial Intelligence areas to pursue a smarter life.</p>
+        apply my knowledge into Data Engineering and Artificial Intelligence areas to pursue a smarter life.</p>
 </div>
 
 
@@ -91,7 +91,7 @@
     <p><b> Linux Programmer, Assist in programming tasks for Mellon College of Science (Python) </b></p>
     <p><i>Carnegie Mellon University, Pittsburgh, PA, October - present 2016</i></p>
     <ul>
-        <li> Anomaly analysis on emails of server log files with learning algorithm</li>
+        <li> use procmail recipes to filter and pipe new email log files to script, then perform anomaly analysis </li>
     </ul>
 
     <p><b> Research Student, Experimental Evaluation for Pivot-based Metric Index (C++) </b></p>
@@ -179,9 +179,7 @@
 <div class="wrapper">
     <h3>COURSES</h3>
     <ul>
-        <li> Machine Learning (Stanford@Coursera), Data Science and Engineering with Spark (UCB@edX), Overview of
-            Internet of Things (NTHU@icourse163)
-        </li>
+        <li> Machine Learning, Data Science and Engineering with Spark, Overview of Internet of Things </li>
     </ul>
 </div>
 
