--- a/resume/resume2.html
+++ b/resume/resume2.html
@@ -5,7 +5,7 @@
     <title>Hanyu_Yang_Resume</title>
     <style type="text/css">
         h1, p, h3, h5, ul {
-            margin-top: 1px;
+            margin-top: 2px;
             margin-bottom: 1px;
         }
 
@@ -76,7 +76,7 @@
     <h3>EDUCATION</h3>
     <p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
     <p><i>Master of Science in Information Technology, Mobility, Expected May 2018</i></p>
-    <p class="course">Course: Introduction to Computer Systems (15513), Web Application Development (15637), Information Security (14741), Telecommunications & Computer Networks (14740), Distributed Systems (15640), Cloud Computing (15619) </p>
+    <p class="course">Course: Introduction to Computer Systems (15513), Web Application Development (15637), Information Security (14741) </p>
 
     <p><b> Singapore Management University, Singapore </b></p>
     <p><i>Exchange, Information Systems, December 2015, Major GPA 3.9</i></p>
@@ -91,7 +91,7 @@
     <p><b> Linux Programmer, Assist in programming tasks for Mellon College of Science (Python) </b></p>
     <p><i>Carnegie Mellon University, Pittsburgh, PA, October - present 2016</i></p>
     <ul>
-        <li> Anomaly analysis on emails of server log files with learning algorithm</li>
+        <li> use procmail recipes to filter and pipe new email log files to script, then perform anomaly analysis </li>
     </ul>
 
     <p><b> Research Student, Experimental Evaluation for Pivot-based Metric Index (C++) </b></p>
