--- a/resume/resume2.html
+++ b/resume/resume2.html
@@ -140,11 +140,10 @@
     </div>
 
     <div class="right">
-        <p><b> Student Research Training Program (Python) </b></p>
-        <p><i>Zhejiang University, Spring 2015</i></p>
+        <p><b> Introduction to Computer Systems (C) </b></p>
+        <p><i>Carnegie Mellon University, Fall 2016</i></p>
         <ul>
-            <li> Utilized Arduino to collect and process data from an insole sensor, and designed a gait pattern
-                detection algorithm to trigger tasks.
+            <li> Overwrote the system level Dynamic Storage Allocator, to allocate (malloc), reclaim (free), split, and coalesce memory space from heap.
             </li>
         </ul>
 
